--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+ /* Use a more-intuitive box-sizing model. */
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ /* Remove default margin */
+* {
+  margin: 0;
+}
+
+ /* Allow percentage-based heights in the application */
+html, body {
+  height: 100%;
+}
+
+ /* Improve text rendering */
+body {
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+ /* Improve media defaults */
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+ /* Remove built-in form typography styles */
+input, button, textarea, select {
+  font: inherit;
+}
+ /* Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+ /* Create a root stacking context */
+#root, #__next {
+  isolation: isolate;
 }
